update recent changes

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,18 +1,15 @@
-v 1.0.1
-      trivial fix for release.txt
-      improve text
-      remove completed tasks
-      initial commit of 07-M2-Measurement.ipynb
-      bump version
-
-v1.0.0
-      first pass at docs
-      General doc improvements
-      add routine to draw default figure
-      handle symmetric case dx=dy better
-      add new definitions and test dx=dy case
+v0.2.0
+      initial checkin
+      improve description
+      import all routines by default
+      limit imports, rename index, add hyperbolic_secant_profile_index
+      ignore checkpoint dir
+      fix importing, update for new names
+      Merge branch 'master' of https://github.com/scottprahl/pygrin
 
 v0.2.0
-      initial commit
-      ensure float used for sums
-      first public release
+      fix typos
+      change status to alpha
+      update version
+      update version
+      update version
