last set of changes before updating

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,15 +1,23 @@
-v0.2.0
-      initial checkin
-      improve description
-      import all routines by default
-      limit imports, rename index, add hyperbolic_secant_profile_index
-      ignore checkpoint dir
-      fix importing, update for new names
-      Merge branch 'master' of https://github.com/scottprahl/pygrin
+v0.3.0
+    renamed pitch() to period() to avoid stepping on the name.
+    improve readme
+    improve packaging
+    fix pylint warnings
+    fix pep257 warnings
+    fix pyroma warnings
 
 v0.2.0
-      fix typos
-      change status to alpha
-      update version
-      update version
-      update version
+    initial checkin
+    improve description
+    import all routines by default
+    limit imports, rename index, add hyperbolic_secant_profile_index
+    ignore checkpoint dir
+    fix importing, update for new names
+    Merge branch 'master' of https://github.com/scottprahl/pygrin
+
+v0.2.0
+    fix typos
+    change status to alpha
+    update version
+    update version
+    update version
